# ClinCoT

./: README.md  pyproject.toml  requirements.txt  setup.cfg
clincot/cli/: __init__.py  evaluate.py  export.py  infer.py  train.py
clincot/evaluation/: __init__.py  factuality_metrics.py  runner.py  vqa_metrics.py
clincot/evaluation/utils/: __init__.py  io.py  text.py
clincot/inference/: __init__.py  common.py  cot_infer.py  report_infer.py  vqa_infer.py
clincot/methods/: __init__.py  clincot_pipeline.py  clinical_scorer.py  sdpo_loss.py  trainer_core.py  visual_cot.py
clincot/models/: __init__.py  builder.py  checkpoint_io.py  language_backbone.py  multimodal_projector.py  vision_backbone.py
clincot/utils/: __init__.py  env.py  io.py  logging.py  registry.py  seed.py
configs/data/: med_vqa.yaml  report_gen.yaml
configs/exp/: clincot_ablation.yaml  clincot_base.yaml
configs/infer/: report.yaml  vqa.yaml
configs/model/: llava_med.yaml  omnilmm.yaml
configs/train/: deepspeed_zero2.yaml  dpo.yaml  sdpo.yaml
docs/: checkpoint_policy.md  data_format.md  experiment_protocol.md
scripts/: data_build_pairs.sh  eval_report.sh  eval_vqa.sh  infer_report.sh  infer_vqa.sh  train_ddp.sh  train_deepspeed.sh
tests/integration/: test_eval_runner.py
tests/smoke/: test_imports.py
tests/unit/: test_sdpo_loss.py
